// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OpenWeatherMap /> w data w config 1`] = `
<div
  className="container-class-name"
>
  <div
    className="main-heading"
  >
    London
    , 
    GB
  </div>
  <div
    className="day"
  >
    Saturday 2:07 PM
  </div>
  <div
    className="description"
  >
    light rain
  </div>
  <div
    className="icon"
  >
    <img
      alt="light rain"
      src="http://openweathermap.org/img/w/10n.png"
    />
  </div>
  <div
    className="temperature"
  >
    16.62
     °C
  </div>
</div>
`;

exports[`<OpenWeatherMap /> w data w/o config 1`] = `
<div
  className="react-open-weather-map"
>
  <div
    className="main-heading"
  >
    London
    , 
    GB
  </div>
  <div
    className="day"
  >
    Saturday 2:07 PM
  </div>
  <div
    className="description"
  >
    light rain
  </div>
  <div
    className="icon"
  >
    <img
      alt="light rain"
      src="http://openweathermap.org/img/w/10n.png"
    />
  </div>
  <div
    className="temperature"
  >
    16.62
     °C
  </div>
</div>
`;

exports[`<OpenWeatherMap /> w/o data w config 1`] = `
<div
  className="container-class-name"
>
  <div
    className="main-heading"
  >
    , 
  </div>
  <div
    className="day"
  >
    Invalid date
  </div>
  <div
    className="description"
  />
  <div
    className="icon"
  >
    <img
      alt={undefined}
      src="http://openweathermap.org/img/w/undefined.png"
    />
  </div>
  <div
    className="temperature"
  >
     °C
  </div>
</div>
`;

exports[`<OpenWeatherMap /> w/o data w/o config 1`] = `
<div
  className="react-open-weather-map"
>
  <div
    className="main-heading"
  >
    , 
  </div>
  <div
    className="day"
  >
    Invalid date
  </div>
  <div
    className="description"
  />
  <div
    className="icon"
  >
    <img
      alt={undefined}
      src="http://openweathermap.org/img/w/undefined.png"
    />
  </div>
  <div
    className="temperature"
  >
     °C
  </div>
</div>
`;
